--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     this is my first time using git and git hub
     jiiii
-    hellooo any chnges
+    \n hellooo any chnges
     
 </body>
 </html>
