reset:new branch

--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
     this is my first time using git and git hub
     jiiii
     \n hellooo any chnges
+
+
+    created a new branch
     
 </body>
 </html>
